--- a/less/index.less
+++ b/less/index.less
@@ -2,7 +2,7 @@
 @import "./tool";
 
 @import "./modal";
-// @import "./inputButton";
+@import "./input";
 @import "./prompt";
 @import "./paging";
 @import "./form";
