--- a/less/input.less
+++ b/less/input.less
@@ -21,5 +21,23 @@
         background-color: @color-bk-1;
       }
     }
-  }  
+  }
+  &.sk-input-search {
+    position: relative;
+
+    &>i {
+      position: absolute;
+      top: 0;
+      right: 0;
+      background-image: url(../src/icon/i-search.svg);
+      display: inline-block;
+      width: 30px;
+      height: 30px;
+      padding: 0 10px;
+      background-size: 26px 26px;
+      background-repeat: no-repeat;
+      background-position: 12px -2px;
+      cursor: pointer;
+    }
+  }
 }
