--- a/styles/index.css
+++ b/styles/index.css
@@ -1294,6 +1294,39 @@
   padding: 0 10px;
   border-radius: 12px;
 }
+.sk-list-search {
+  height: 200px;
+  overflow: auto;
+  position: relative;
+  padding-top: 30px;
+  width: 250px;
+}
+.sk-list-search .input-search {
+  position: absolute;
+  top: 0;
+  left: 0;
+  padding: 0 20px;
+  width: 100%;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+}
+.sk-list-search .list-search {
+  padding: 0 20px;
+}
+.sk-list-search .list-search .items-search {
+  line-height: 30px;
+  padding-top: 10px;
+}
+.sk-list-search .list-search .items-search > div {
+  border-bottom: 1px solid #f2f2f2;
+  padding: 0 20px;
+  cursor: pointer;
+}
+.sk-list-search .list-search .items-search > div:hover {
+  background-color: #F1F3F4;
+}
 html {
   padding: 0;
   margin: 0;
