--- a/less/list.less
+++ b/less/list.less
@@ -26,7 +26,7 @@
   .items-search {
     position: absolute;
     top: 100%;
-    margin-top: 10px;
+    margin-top: 5px;
     left: 0;
     width: 100%;
     line-height: 30px;
@@ -37,6 +37,8 @@
     .border-box();
     border: 1px solid #eaedf1;
     .transition(all, 0.5s, ease);
+    background-color: #ffffff;
+    font-size: 14px;
 
     &.hidden {
       height: 0;
