--- a/less/list.less
+++ b/less/list.less
@@ -3,7 +3,7 @@
 
 .sk-list-add {
   position: relative;
-  width: 300px;
+  width: 100%;
   border-radius: 15px;
   .input-search {
     position: relative;
@@ -25,6 +25,7 @@
   }
   .items-search {
     position: absolute;
+    z-index: 999;
     top: 100%;
     margin-top: 5px;
     left: 0;
