--- a/styles/index.css
+++ b/styles/index.css
@@ -1296,7 +1296,7 @@
 }
 .sk-list-add {
   position: relative;
-  width: 300px;
+  width: 100%;
   border-radius: 15px;
 }
 .sk-list-add .input-search {
@@ -1318,6 +1318,7 @@
 }
 .sk-list-add .items-search {
   position: absolute;
+  z-index: 999;
   top: 100%;
   margin-top: 5px;
   left: 0;
