--- a/less/table.less
+++ b/less/table.less
@@ -39,6 +39,9 @@
     &:hover {
       background-color: @color-bk;
     }
+    &.active {
+      background-color: @color-bk;
+    }
 
     &>div {
       display: inline-block;
