--- a/less/button.less
+++ b/less/button.less
@@ -24,3 +24,44 @@
     font-size: 20px;
   }
 }
+
+.sk-button-screening {
+  &>div {
+    margin-bottom: 10px;
+    font-size: 0;
+    &>div {
+      display: inline-block;
+      vertical-align: top;
+    }
+    .sk-button-screening-label {
+      width: 60px;
+      opacity: .6;
+      line-height: 26px;
+      font-size: 14px;
+    }
+    .sk-button-screening-bt-list {
+      font-size: 0;
+      &>div {
+        font-size: 14px;
+        display: inline-block;
+        vertical-align: top;
+        background-color: @color-bk;
+        height: 26px;
+        line-height: 26px;
+        padding: 0 20px;
+        margin-right: 10px;
+        border-radius: 15px;
+        .transition(all, 0.5s, ease);
+        cursor: pointer;
+        opacity: .8;
+        &.active {
+          background-color: @color-bk-1;
+          opacity: 1;
+        }
+        &:hover {
+          background-color: @color-bk-1;
+        }
+      }
+    }
+  }
+}
