--- a/styles/index.css
+++ b/styles/index.css
@@ -1241,6 +1241,63 @@
 .sk-button.sk-bt-add {
   font-size: 20px;
 }
+.sk-button-screening > div {
+  margin-bottom: 10px;
+  font-size: 0;
+}
+.sk-button-screening > div > div {
+  display: inline-block;
+  vertical-align: top;
+}
+.sk-button-screening > div .sk-button-screening-label {
+  width: 60px;
+  opacity: 0.6;
+  line-height: 26px;
+  font-size: 14px;
+}
+.sk-button-screening > div .sk-button-screening-bt-list {
+  font-size: 0;
+}
+.sk-button-screening > div .sk-button-screening-bt-list > div {
+  font-size: 14px;
+  display: inline-block;
+  vertical-align: top;
+  background-color: #F1F3F4;
+  height: 26px;
+  line-height: 26px;
+  padding: 0 20px;
+  margin-right: 10px;
+  border-radius: 15px;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+  cursor: pointer;
+  opacity: 0.8;
+}
+.sk-button-screening > div .sk-button-screening-bt-list > div.active {
+  background-color: #e8eaed;
+  opacity: 1;
+}
+.sk-button-screening > div .sk-button-screening-bt-list > div:hover {
+  background-color: #e8eaed;
+}
 .sk-switch {
   height: 30px;
 }
