--- a/less/button.less
+++ b/less/button.less
@@ -7,16 +7,17 @@
 }
 
 .sk-button {
-  height: 30px;
+  height: 26px;
   background-color: @color-bk-1;
   border-radius: 15px;
   cursor: pointer;
-  border: 1px solid @color-main-1;
+  margin-bottom: 10px;
+  border: 0 solid @color-main-1;
   margin-right: 10px;
   display: inline-block;
   vertical-align: top;
-  font-size: 14px;
-  line-height: 28px;
+  font-size: 12px;
+  line-height: 26px;
   padding: 0 24px;
   .transition(all, 0.5s, ease);
 
