--- a/less/form.less
+++ b/less/form.less
@@ -30,6 +30,78 @@
         .border-box();
       }
 
+      .sk-tags {
+        .sk-tag-input {
+          display: inline-block;
+          vertical-align: top;
+          width: 180px;
+          height: 24px;
+          line-height: 24px;
+          margin: 3px 0;
+          position: relative;
+          input {
+            height: 24px;
+            line-height: 24px;
+            font-size: 12px;
+            padding: 5px 40px 5px 15px;
+          }
+          .sk-tag-input-bt-add {
+            position: absolute;
+            top: 0;
+            right: 0;
+            background-color: @color-bk-1;
+            opacity: .6;
+            font-size: 14px;
+            width: 30px;
+            height: 24px;
+            line-height: 24px;
+            text-align: center;
+            border-radius: 0 15px 15px 0;
+            cursor: pointer;
+          }
+        }
+        .sk-tag-item {
+          display: inline-block;
+          vertical-align: top;
+          font-size: 12px;
+          line-height: 24px;
+          height: 24px;
+          background-color: @color-bk;
+          padding: 0 15px;
+          margin-right: 10px;
+          margin-top: 3px;
+          border-radius: 15px;
+          cursor: pointer;
+          .transition(all, 0.5s, ease);
+          position: relative;
+          overflow: hidden;
+
+          .sk-tag-del {
+            position: absolute;
+            top: 100%;
+            left: 0;
+            background-color: @color-red;
+            font-size: 12px;
+            width: 100%;
+            height: 100%;
+            .transition(all, 0.5s, ease);
+            text-align: center;
+            color: #ffffff;
+            overflow: hidden;
+            opacity: 0;
+            cursor: pointer;
+          }
+
+          &:hover {
+            background-color: @color-bk-1;
+            .sk-tag-del {
+              .translate(0, -100%);
+              opacity: 1;
+            }
+          }
+        }
+      }
+
       .sk-date {
         height: 30px;
         position: relative;
