--- a/styles/index.css
+++ b/styles/index.css
@@ -516,6 +516,35 @@
   -o-transform: translate(0, -100%);
   opacity: 1;
 }
+.sk-form .sk-form-items .sk-form-row .sk-number .sk-number-input > div {
+  display: inline-block;
+  font-size: 14px;
+  vertical-align: top;
+  width: 50px;
+  text-align: center;
+  background-color: #e8eaed;
+  cursor: pointer;
+  font-weight: bold;
+}
+.sk-form .sk-form-items .sk-form-row .sk-number .sk-number-input > div.reduce {
+  border-radius: 30px 0 0 30px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-number .sk-number-input > div.increase {
+  border-radius: 0 30px 30px 0;
+}
+.sk-form .sk-form-items .sk-form-row .sk-number .sk-number-input input {
+  width: 80px;
+  padding: 0 5px;
+  text-align: center;
+  border-radius: 0;
+}
+.sk-form .sk-form-items .sk-form-row .sk-number .sk-number-input input::-webkit-outer-spin-button,
+.sk-form .sk-form-items .sk-form-row .sk-number .sk-number-input input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+}
+.sk-form .sk-form-items .sk-form-row .sk-number .sk-number-input input[type="number"] {
+  -moz-appearance: textfield;
+}
 .sk-form .sk-form-items .sk-form-row .sk-date {
   height: 30px;
   position: relative;
