update ui  add checkbox

--- a/less/color.less
+++ b/less/color.less
@@ -8,5 +8,6 @@
 @color-font-bt: #007bbd;
 @color-font-bt-disabled: #ddd;
 @color-red: #f76464;
-
+@color-active-bk: #2c3e50;
+@color-active-font: #ffffff;
 
