--- a/less/form.less
+++ b/less/form.less
@@ -135,7 +135,6 @@
               -moz-appearance: textfield;
           }
         }
-        
       }
 
       .sk-date {
@@ -437,48 +436,72 @@
         }
       }
 
-      .sk-radio {
-        line-height: 30px;
-        min-height: 30px;
-        padding-left: 10px;
+      .sk-checkbox {
         &>div {
           display: inline-block;
-          margin-right: 20px;
-          font-size: 14px;
+          vertical-align: top;
+          font-size: 12px;
+          line-height: 24px;
+          height: 24px;
+          background-color: @color-bk;
+          padding: 0 15px;
+          margin-right: 10px;
+          margin-top: 3px;
+          border-radius: 15px;
           cursor: pointer;
+          .transition(all, 0.5s, ease);
           position: relative;
-          padding-left: 20px;
-          &:before {
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 0;
-            width: 14px;
-            height: 14px;
-            .translate(0, -50%); 
-            display: inline-block;
-            border: 1px solid @color-main;
-            vertical-align: top;
-            .border-box();
-          }
+          overflow: hidden;
 
-          &:after {
-            width: 8px;
-            height: 8px;
-            content: '';
-            position: absolute;
-            top: 50%;
-            left: 0;
-            display: inline-block;
-            background-color: @color-main;
-            .translate(3px, -50%);
-            .transition(all, 0.5s, ease);
-            opacity: 0; 
+          &:hover {
+            background-color: @color-active-bk;
+            color: @color-active-font;
+            opacity: .6;
           }
 
           &.active {
-            &:after {
+            background-color: @color-active-bk;
+            color: @color-active-font;
+            &:hover {
               opacity: 1;
+            }
+          }
+        }
+      }
+
+      .sk-radio {
+        display: flex;
+        &>div {
+          height: 24px;
+          background-color: @color-bk;
+          display: inline-block;
+          font-size: 0;
+          margin-top: 3px;
+          border-radius: 15px;
+          overflow: hidden;
+
+          &>div {
+            display: inline-block;
+            vertical-align: top;
+            font-size: 12px;
+            line-height: 24px;
+            height: 24px;
+            padding: 0 15px;
+            cursor: pointer;
+            .transition(all, 0.5s, ease);
+
+            &:hover {
+              background-color: @color-active-bk;
+              color: @color-active-font;
+              opacity: .6;
+            }
+
+            &.active {
+              background-color: @color-active-bk;
+              color: @color-active-font;
+              &:hover {
+                opacity: 1;
+              }
             }
           }
         }
