--- a/styles/index.css
+++ b/styles/index.css
@@ -879,53 +879,18 @@
   border: 0 solid #F1F3F4;
   outline: none;
 }
-.sk-form .sk-form-items .sk-form-row .sk-radio {
-  line-height: 30px;
-  min-height: 30px;
-  padding-left: 10px;
-}
-.sk-form .sk-form-items .sk-form-row .sk-radio > div {
+.sk-form .sk-form-items .sk-form-row .sk-checkbox > div {
   display: inline-block;
-  margin-right: 20px;
-  font-size: 14px;
-  cursor: pointer;
-  position: relative;
-  padding-left: 20px;
-}
-.sk-form .sk-form-items .sk-form-row .sk-radio > div:before {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 0;
-  width: 14px;
-  height: 14px;
-  transform: translate(0, -50%);
-  -ms-transform: translate(0, -50%);
-  -moz-transform: translate(0, -50%);
-  -webkit-transform: translate(0, -50%);
-  -o-transform: translate(0, -50%);
-  display: inline-block;
-  border: 1px solid #2c3e50;
   vertical-align: top;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-}
-.sk-form .sk-form-items .sk-form-row .sk-radio > div:after {
-  width: 8px;
-  height: 8px;
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 0;
-  display: inline-block;
-  background-color: #2c3e50;
-  transform: translate(3px, -50%);
-  -ms-transform: translate(3px, -50%);
-  -moz-transform: translate(3px, -50%);
-  -webkit-transform: translate(3px, -50%);
-  -o-transform: translate(3px, -50%);
+  font-size: 12px;
+  line-height: 24px;
+  height: 24px;
+  background-color: #F1F3F4;
+  padding: 0 15px;
+  margin-right: 10px;
+  margin-top: 3px;
+  border-radius: 15px;
+  cursor: pointer;
   transition-property: all;
   transition-duration: 0.5s;
   transition-timing-function: ease;
@@ -946,9 +911,72 @@
   -ms-transition-duration: 0.5s;
   -ms-transition-timing-function: ease;
   -ms-transition-delay: 0;
-  opacity: 0;
+  position: relative;
+  overflow: hidden;
 }
-.sk-form .sk-form-items .sk-form-row .sk-radio > div.active:after {
+.sk-form .sk-form-items .sk-form-row .sk-checkbox > div:hover {
+  background-color: #2c3e50;
+  color: #ffffff;
+  opacity: 0.6;
+}
+.sk-form .sk-form-items .sk-form-row .sk-checkbox > div.active {
+  background-color: #2c3e50;
+  color: #ffffff;
+}
+.sk-form .sk-form-items .sk-form-row .sk-checkbox > div.active:hover {
+  opacity: 1;
+}
+.sk-form .sk-form-items .sk-form-row .sk-radio {
+  display: flex;
+}
+.sk-form .sk-form-items .sk-form-row .sk-radio > div {
+  height: 24px;
+  background-color: #F1F3F4;
+  display: inline-block;
+  font-size: 0;
+  margin-top: 3px;
+  border-radius: 15px;
+  overflow: hidden;
+}
+.sk-form .sk-form-items .sk-form-row .sk-radio > div > div {
+  display: inline-block;
+  vertical-align: top;
+  font-size: 12px;
+  line-height: 24px;
+  height: 24px;
+  padding: 0 15px;
+  cursor: pointer;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+}
+.sk-form .sk-form-items .sk-form-row .sk-radio > div > div:hover {
+  background-color: #2c3e50;
+  color: #ffffff;
+  opacity: 0.6;
+}
+.sk-form .sk-form-items .sk-form-row .sk-radio > div > div.active {
+  background-color: #2c3e50;
+  color: #ffffff;
+}
+.sk-form .sk-form-items .sk-form-row .sk-radio > div > div.active:hover {
   opacity: 1;
 }
 .sk-layout {
