--- a/less/form.less
+++ b/less/form.less
@@ -348,6 +348,217 @@
         }
       }
 
+      .sk-picture {
+        width: 150px;
+        height: 80px;
+        background-color: rgb(232,234,237);
+        border: 5px solid rgb(232,234,237);
+        border-radius: 15px;
+        position: relative;
+        overflow: hidden;
+
+        .sk-picture-modal {
+          position: fixed;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background-color: rgba(0, 0, 0, 0.4);
+
+          &>div {
+            width: 600px;
+            height: 400px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            .translate(-50%, -50%);
+            background-color: #ffffff;
+
+            .sk-picture-modal-close {
+              position: absolute;
+              top: 0;
+              right: 0;
+              width: 30px;
+              height: 30px;
+              line-height: 30px;
+              font-size: 16px;
+              cursor: pointer;
+              text-align: center;
+              border-radius: 0 0 0 15px;
+              .transition(all, 0.5s, ease);
+              &:hover {
+                background-color: rgba(44, 62, 80, 0.2);
+              }
+            }
+          }
+        }
+
+        i {
+          background-image: url('../src/icon/i-upload.svg');
+          width: 50px;
+          height: 50px;
+          display: inline-block;
+          background-size: 100%;
+          top: 50%;
+          left: 50%;
+          position: absolute;
+          .translate(-50%, -50%);
+        }
+
+        img {
+          max-height: 100%;
+          max-width: 100%;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          .translate(-50%, -50%);
+        }
+
+        input {
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          opacity: 0;
+        }
+      }
+
+      .sk-region {
+        &>div {
+          display: inline-block;
+          position: relative;
+        }
+        .sk-region-value {
+          display: inline-block;
+          cursor: pointer;
+
+          &>div {
+            background-color: @color-bk;
+            height: 24px;
+            line-height: 24px;
+            font-size: 12px;
+            padding: 0 20px;
+            border-radius: 20px;
+            display: inline-block;
+            vertical-align: top;
+            margin-right: 5px;
+            margin-top: 3px;
+          }
+          .sk-region-value-x {
+            background-color: #ffffff;
+            padding: 0;
+            width: 24px;
+            height: 24px;
+            font-size: 12px;
+            text-align: center;
+            cursor: pointer;
+
+            &:hover {
+              background-color: @color-bk;
+            }
+          }
+        }
+        .sk-region-modal {
+          position: fixed;
+          width: 100%;
+          height: 100%;
+          top: 0;
+          left: 0;
+          background-color: rgba(0, 0, 0, 0.2);
+          z-index: 1001;
+
+          .sk-region-modal-close {
+            position: absolute;
+            top: 0;
+            right: 0;
+            width: 30px;
+            height: 30px;
+            line-height: 30px;
+            font-size: 16px;
+            cursor: pointer;
+            text-align: center;
+            border-radius: 0 0 0 15px;
+            .transition(all, 0.5s, ease);
+            &:hover {
+              background-color: rgba(44, 62, 80, 0.2);
+            }
+          }
+
+          &>div {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            display: inline-table;
+            .translate(-50%, -50%);
+            background-color: #ffffff;
+            padding: 20px 20px 0 20px;
+            .sk-region-modal-body {
+            font-size: 0;
+
+              &>div {
+                display: inline-block;
+                vertical-align: top;
+                width: 180px;
+                margin: 0 10px;
+              }
+            }
+
+            .sk-region-modal-bt {
+              text-align: center;
+              padding: 20px;
+              &>div {
+                font-size: 12px;
+                line-height: 24px;
+                display: inline-block;
+                background-color: @color-bk-1;
+                padding: 0 15px;
+                border-radius: 15px;
+                cursor: pointer;
+              }
+            }
+            .sk-region-title {
+              font-size: 12px;
+              line-height: 24px;
+              padding-bottom: 10px;
+
+              &>div {
+                display: inline-block;
+                vertical-align: top;
+                margin-right: 5px;
+
+                &.sk-region-title-data {
+                  border: 1px solid @color-solid;
+                  border-radius: 30px;
+                  padding: 0 10px;
+                  line-height: 22px;
+                }
+              }
+            }
+            .sk-region-data-arr {
+              font-size: 12px;
+              line-height: 24px;
+              height: 250px;
+              border: 1px solid @color-solid;
+              overflow: auto;
+
+              &>div {
+                cursor: pointer;
+                padding: 0 10px;
+
+                &:hover {
+                  background-color: @color-bk;
+                }
+
+                &.active {
+                  background-color: @color-bk;
+                }
+              }
+            }
+          }
+        }
+      }
+
       .sk-upload {
         width: 150px;
         height: 80px;
@@ -397,6 +608,24 @@
         height: 30px;
       }
 
+      .sk-twoInput {
+        input {
+          height: 24px;
+          line-height: 24px;
+          width: 100px;
+          display: inline-block;
+          vertical-align: top;
+          margin-top: 3px;
+        }
+        div {
+          font-size: 14px;
+          line-height: 24px;
+          margin-top: 3px;
+          display: inline-block;
+          vertical-align: top;
+        }
+      }
+
       .sk-select {
         background-color: @color-bk;
         border-radius: 15px;
@@ -443,7 +672,7 @@
           font-size: 12px;
           line-height: 24px;
           height: 24px;
-          background-color: @color-bk;
+          border: 1px solid @color-solid;
           padding: 0 15px;
           margin-right: 10px;
           margin-top: 3px;
@@ -454,17 +683,11 @@
           overflow: hidden;
 
           &:hover {
-            background-color: @color-active-bk;
-            color: @color-active-font;
-            opacity: .6;
+            background-color: @color-bk-1;
           }
 
           &.active {
-            background-color: @color-active-bk;
-            color: @color-active-font;
-            &:hover {
-              opacity: 1;
-            }
+            background-color: @color-bk-1;
           }
         }
       }
@@ -473,7 +696,7 @@
         display: flex;
         &>div {
           height: 24px;
-          background-color: @color-bk;
+          border: 1px solid @color-solid;
           display: inline-block;
           font-size: 0;
           margin-top: 3px;
@@ -491,17 +714,11 @@
             .transition(all, 0.5s, ease);
 
             &:hover {
-              background-color: @color-active-bk;
-              color: @color-active-font;
-              opacity: .6;
+              background-color: @color-bk-1;
             }
 
             &.active {
-              background-color: @color-active-bk;
-              color: @color-active-font;
-              &:hover {
-                opacity: 1;
-              }
+              background-color: @color-bk-1;
             }
           }
         }
