--- a/styles/index.css
+++ b/styles/index.css
@@ -790,6 +790,250 @@
 .sk-form .sk-form-items .sk-form-row .sk-date .day-picker .day-items > div.top:hover {
   background-color: #fff;
 }
+.sk-form .sk-form-items .sk-form-row .sk-picture {
+  width: 150px;
+  height: 80px;
+  background-color: #e8eaed;
+  border: 5px solid #e8eaed;
+  border-radius: 15px;
+  position: relative;
+  overflow: hidden;
+}
+.sk-form .sk-form-items .sk-form-row .sk-picture .sk-picture-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.sk-form .sk-form-items .sk-form-row .sk-picture .sk-picture-modal > div {
+  width: 600px;
+  height: 400px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  background-color: #ffffff;
+}
+.sk-form .sk-form-items .sk-form-row .sk-picture .sk-picture-modal > div .sk-picture-modal-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+  border-radius: 0 0 0 15px;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+}
+.sk-form .sk-form-items .sk-form-row .sk-picture .sk-picture-modal > div .sk-picture-modal-close:hover {
+  background-color: rgba(44, 62, 80, 0.2);
+}
+.sk-form .sk-form-items .sk-form-row .sk-picture i {
+  background-image: url('../src/icon/i-upload.svg');
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+  background-size: 100%;
+  top: 50%;
+  left: 50%;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+}
+.sk-form .sk-form-items .sk-form-row .sk-picture img {
+  max-height: 100%;
+  max-width: 100%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+}
+.sk-form .sk-form-items .sk-form-row .sk-picture input {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+}
+.sk-form .sk-form-items .sk-form-row .sk-region > div {
+  display: inline-block;
+  position: relative;
+}
+.sk-form .sk-form-items .sk-form-row .sk-region .sk-region-value {
+  display: inline-block;
+  cursor: pointer;
+}
+.sk-form .sk-form-items .sk-form-row .sk-region .sk-region-value > div {
+  background-color: #F1F3F4;
+  height: 24px;
+  line-height: 24px;
+  font-size: 12px;
+  padding: 0 20px;
+  border-radius: 20px;
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 5px;
+  margin-top: 3px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-region .sk-region-value .sk-region-value-x {
+  background-color: #ffffff;
+  padding: 0;
+  width: 24px;
+  height: 24px;
+  font-size: 12px;
+  text-align: center;
+  cursor: pointer;
+}
+.sk-form .sk-form-items .sk-form-row .sk-region .sk-region-value .sk-region-value-x:hover {
+  background-color: #F1F3F4;
+}
+.sk-form .sk-form-items .sk-form-row .sk-region .sk-region-modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 1001;
+}
+.sk-form .sk-form-items .sk-form-row .sk-region .sk-region-modal .sk-region-modal-close {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+  border-radius: 0 0 0 15px;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+}
+.sk-form .sk-form-items .sk-form-row .sk-region .sk-region-modal .sk-region-modal-close:hover {
+  background-color: rgba(44, 62, 80, 0.2);
+}
+.sk-form .sk-form-items .sk-form-row .sk-region .sk-region-modal > div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  display: inline-table;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -moz-transform: translate(-50%, -50%);
+  -webkit-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  background-color: #ffffff;
+  padding: 20px 20px 0 20px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-region .sk-region-modal > div .sk-region-modal-body {
+  font-size: 0;
+}
+.sk-form .sk-form-items .sk-form-row .sk-region .sk-region-modal > div .sk-region-modal-body > div {
+  display: inline-block;
+  vertical-align: top;
+  width: 180px;
+  margin: 0 10px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-region .sk-region-modal > div .sk-region-modal-bt {
+  text-align: center;
+  padding: 20px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-region .sk-region-modal > div .sk-region-modal-bt > div {
+  font-size: 12px;
+  line-height: 24px;
+  display: inline-block;
+  background-color: #e8eaed;
+  padding: 0 15px;
+  border-radius: 15px;
+  cursor: pointer;
+}
+.sk-form .sk-form-items .sk-form-row .sk-region .sk-region-modal > div .sk-region-title {
+  font-size: 12px;
+  line-height: 24px;
+  padding-bottom: 10px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-region .sk-region-modal > div .sk-region-title > div {
+  display: inline-block;
+  vertical-align: top;
+  margin-right: 5px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-region .sk-region-modal > div .sk-region-title > div.sk-region-title-data {
+  border: 1px solid #eaedf1;
+  border-radius: 30px;
+  padding: 0 10px;
+  line-height: 22px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-region .sk-region-modal > div .sk-region-data-arr {
+  font-size: 12px;
+  line-height: 24px;
+  height: 250px;
+  border: 1px solid #eaedf1;
+  overflow: auto;
+}
+.sk-form .sk-form-items .sk-form-row .sk-region .sk-region-modal > div .sk-region-data-arr > div {
+  cursor: pointer;
+  padding: 0 10px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-region .sk-region-modal > div .sk-region-data-arr > div:hover {
+  background-color: #F1F3F4;
+}
+.sk-form .sk-form-items .sk-form-row .sk-region .sk-region-modal > div .sk-region-data-arr > div.active {
+  background-color: #F1F3F4;
+}
 .sk-form .sk-form-items .sk-form-row .sk-upload {
   width: 150px;
   height: 80px;
@@ -841,6 +1085,21 @@
   overflow: hidden;
   height: 30px;
 }
+.sk-form .sk-form-items .sk-form-row .sk-twoInput input {
+  height: 24px;
+  line-height: 24px;
+  width: 100px;
+  display: inline-block;
+  vertical-align: top;
+  margin-top: 3px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-twoInput div {
+  font-size: 14px;
+  line-height: 24px;
+  margin-top: 3px;
+  display: inline-block;
+  vertical-align: top;
+}
 .sk-form .sk-form-items .sk-form-row .sk-select {
   background-color: #F1F3F4;
   border-radius: 15px;
@@ -885,7 +1144,7 @@
   font-size: 12px;
   line-height: 24px;
   height: 24px;
-  background-color: #F1F3F4;
+  border: 1px solid #eaedf1;
   padding: 0 15px;
   margin-right: 10px;
   margin-top: 3px;
@@ -915,23 +1174,17 @@
   overflow: hidden;
 }
 .sk-form .sk-form-items .sk-form-row .sk-checkbox > div:hover {
-  background-color: #2c3e50;
-  color: #ffffff;
-  opacity: 0.6;
+  background-color: #e8eaed;
 }
 .sk-form .sk-form-items .sk-form-row .sk-checkbox > div.active {
-  background-color: #2c3e50;
-  color: #ffffff;
-}
-.sk-form .sk-form-items .sk-form-row .sk-checkbox > div.active:hover {
-  opacity: 1;
+  background-color: #e8eaed;
 }
 .sk-form .sk-form-items .sk-form-row .sk-radio {
   display: flex;
 }
 .sk-form .sk-form-items .sk-form-row .sk-radio > div {
   height: 24px;
-  background-color: #F1F3F4;
+  border: 1px solid #eaedf1;
   display: inline-block;
   font-size: 0;
   margin-top: 3px;
@@ -968,16 +1221,10 @@
   -ms-transition-delay: 0;
 }
 .sk-form .sk-form-items .sk-form-row .sk-radio > div > div:hover {
-  background-color: #2c3e50;
-  color: #ffffff;
-  opacity: 0.6;
+  background-color: #e8eaed;
 }
 .sk-form .sk-form-items .sk-form-row .sk-radio > div > div.active {
-  background-color: #2c3e50;
-  color: #ffffff;
-}
-.sk-form .sk-form-items .sk-form-row .sk-radio > div > div.active:hover {
-  opacity: 1;
+  background-color: #e8eaed;
 }
 .sk-layout {
   width: 100%;
@@ -1419,19 +1666,20 @@
 .sk-button-screening > div .sk-button-screening-label {
   width: 60px;
   opacity: 0.6;
-  line-height: 26px;
+  line-height: 30px;
   font-size: 14px;
 }
 .sk-button-screening > div .sk-button-screening-bt-list {
   font-size: 0;
 }
 .sk-button-screening > div .sk-button-screening-bt-list > div {
-  font-size: 14px;
+  font-size: 12px;
   display: inline-block;
   vertical-align: top;
-  background-color: #F1F3F4;
-  height: 26px;
-  line-height: 26px;
+  border: 1px solid #eaedf1;
+  height: 22px;
+  line-height: 22px;
+  margin-top: 3px;
   padding: 0 20px;
   margin-right: 10px;
   border-radius: 15px;
@@ -1456,11 +1704,9 @@
   -ms-transition-timing-function: ease;
   -ms-transition-delay: 0;
   cursor: pointer;
-  opacity: 0.8;
 }
 .sk-button-screening > div .sk-button-screening-bt-list > div.active {
   background-color: #e8eaed;
-  opacity: 1;
 }
 .sk-button-screening > div .sk-button-screening-bt-list > div:hover {
   background-color: #e8eaed;
