--- a/less/form.less
+++ b/less/form.less
@@ -364,12 +364,14 @@
           width: 100%;
           height: 100%;
           background-color: rgba(0, 0, 0, 0.4);
+          z-index: 1001;
 
           &.sk-picture-modal-none {
             left: 100%;
           }
 
           &>div {
+            height: 420px;
             padding: 30px;
             position: absolute;
             top: 50%;
@@ -394,6 +396,9 @@
               }
             }
             .sk-picture-modal-center {
+              .imgCanvas {
+                opacity: 0;
+              }
               .sk-picture-modal-center-img {
                 width: 400px;
                 height: 400px;
@@ -421,7 +426,7 @@
             .sk-picture-modal-bt {
               text-align: center;
               font-size: 0;
-              padding-top: 30px;
+              padding-top: 10px;
               span {
                 display: inline-block;
                 font-size: 12px;
