--- a/less/color.less
+++ b/less/color.less
@@ -11,3 +11,14 @@
 @color-active-bk: #2c3e50;
 @color-active-font: #ffffff;
 
+@color-google-font: #3c4043;
+@color-google-font-active: #1a73e8;
+@color-google-bk: #e8f0fe;
+@color-google-bk-hover: rgba(0,0,0,0.039);
+
+@color-default-main: #4381e6;
+@color-default-hover: #d3e3ff;
+@color-default-bk: #f0f3fa;
+
+@width-menu-left: 200px;
+@height-top: 50px;
