--- a/less/layout.less
+++ b/less/layout.less
@@ -7,67 +7,300 @@
   position: fixed;
   top: 0;
   left: 0;
+  .border-box();
+  background-color: #f7f8fa;
 
   &.sk-layout-show-menu {
     .sk-layout-menu{
-      width: 220px;
+      width: @width-menu-left;
 
       .sk-layout-menu-body {
-        width: 220px;
+        width: @width-menu-left;
       }
     }
     .sk-layout-content{
-      padding-left: 220px;
+      padding-left: @width-menu-left;
+
+      .sk-layout-sub-menu {
+        left: @width-menu-left;
+      }
     }
   }
+  &.sk-layout-show-top {
+    padding-top: @height-top;
+    .sk-layout-top-menu {
+      height: @height-top;
+    }
+    .sk-layout-content {
+      padding-top: @height-top;
+      .sk-layout-sub-menu {
+        padding-top: 60px;
+      }
+    }
+  }
+  &.sk-google-theme {
+    .sk-layout-menu {
+      .sk-layout-menu-body {
+        background-image: none;
+        color: @color-google-font;
+        padding-top: 20px;
 
+        &>div {
+          border-radius: 0 20px 20px 0;
+          &:hover {
+            // color: @color-google-font-active;
+            background-color: @color-google-bk-hover;
+          }
+          &.active {
+            color: @color-google-font-active;
+            background-color: @color-google-bk;
+          }
+        }
+      }
+    }
+  }
+  .sk-layout-top-menu {
+    background-color: @color-default-main;
+    .transition(all, 0.5s, ease);
+    position: absolute;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1001;
+    height: 0;
+    .border-box();
+    overflow: hidden;
+
+    .sk-project-name {
+      color: #ffffff;
+      .border-box();
+      font-weight: 300;
+      text-align: center;
+      width: @width-menu-left;
+      line-height: @height-top;
+      font-size: 24px;
+      // padding: 0 20px;
+    }
+    .sk-layout-portrait {
+      position: absolute;
+      right: 0;
+      top: 0;
+      height: 100%;
+      padding: 0 20px;
+
+      .sk-layout-portrait-default {
+        .transition(all, 0.5s, ease);
+        border: 2px solid #ffffff;
+        height: 26px;
+        width: 26px;
+        margin: 10px;
+        border-radius: 20px;
+        cursor: pointer;
+        background-size: 100%;
+        background-image: url('../src/icon/i-portrait.svg');
+
+        // &:hover {
+        //   border: 4px solid #eaedf1;
+        // }
+      }
+    }
+    .sk-layout-portrait-user-info {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      right: 0;
+      z-index: 1002;
+
+      &>div {
+        position: absolute;
+        top: @height-top + 10px;
+        right: 20px;
+        background-color: #ffffff;
+        width: 260px;
+        box-shadow: 0 2px 10px rgba(0,0,0,.2);
+        border-radius: 10px;
+        padding: 20px;
+
+        .sk-layout-portrait-user-portrait {
+          .transition(all, 0.5s, ease);
+          border: 4px solid #ffffff;
+          height: 70px;
+          width: 70px;
+          margin: 10px auto;
+          border-radius: 50%;
+          background-size: 100%;
+          background-image: url('../src/icon/i-portrait.svg');
+          box-shadow: 0 2px 10px rgba(0,0,0,.2);
+        }
+        .sk-layout-portrait-user-name {
+          text-align: center;
+          font-size: 14px;
+          line-height: 30px;
+        }
+        .sk-layout-portrait-user-logout {
+          width: 120px;
+          font-size: 12px;
+          line-height: 30px;
+          margin: 20px auto;
+          cursor: pointer;
+          text-align: center;
+          border: 1px solid #eaedf1;
+          border-radius: 15px;
+          .transition(all, 0.5s, ease);
+
+          &:hover {
+            background-color: #e8eaed;
+          }
+        }
+      }
+    }
+  }
   .sk-layout-menu {
     .transition(all, 0.5s, ease);
     width: 50px;
     height: 100%;
     display: inline-block;
     vertical-align: top;
+    background-color: #ffffff;
     .sk-layout-menu-body {
       position: absolute;
       width: 50px;
       height: 100%;
-      color: #fff;
-      padding-top: 50px;
       .transition(all, 0.5s, ease);
       z-index: 1000;
       overflow: hidden;
-      background-image: url(../src/img/menu-bk.jpeg);
-
-      &:hover {
-        width: 220px;
-      }
 
       &>div {
-        width: 220px;
-        padding-left: 50px;
-        height: 40px;
-        line-height: 40px;
+        margin: 14px 20px;
+        height: 30px;
         .transition(all, 0.5s, ease);
-        cursor: pointer;
-        position: relative;
-        font-size: 14px;
-        .border-box();
-
+        overflow: hidden;
+        
         &.active {
-          background-color: rgba(255, 255, 255, 0.3);
+          height: auto;
+
+          .sk-layout-menu-body-title {
+            color: #ffffff;
+            background-color: @color-default-main;
+
+            i {
+              &.home {
+                background-image: url('../src/icon/i-home-active.svg');
+              }
+              &.employee {
+                background-image: url('../src/icon/i-employee-active.svg');
+              }
+              &.logs {
+                background-image: url('../src/icon/i-logs-active.svg');
+              }
+              &.logout {
+                background-image: url('../src/icon/i-logout-active.svg');
+              }
+              &.auth {
+                background-image: url('../src/icon/i-auth-active.svg');
+              }
+              &.user {
+                background-image: url('../src/icon/i-user-active.svg');
+              }
+              &.teamwork {
+                background-image: url('../src/icon/i-teamwork-active.svg');
+              }
+              &.attend {
+                background-image: url('../src/icon/i-attend-active.svg');
+              }
+              &.statistics {
+                background-image: url('../src/icon/i-statistics-active.svg');
+              }
+              &.approval {
+                background-image: url('../src/icon/i-approval-active.svg');
+              }
+              &.announcement {
+                background-image: url('../src/icon/i-announcement-active.svg');
+              }
+            }
+          }
         }
-        &:hover {
-          background-color: rgba(255, 255, 255, 0.2);
+        .sk-layout-menu-body-title {
+          height: 30px;
+          line-height: 32px;
+          background-color: @color-default-bk;
+          padding-left: 40px;
+          .transition(all, 0.5s, ease);
+          .border-box();
+          position: relative;
+          font-size: 14px;
+          border-radius: 20px;
+          cursor: pointer;
+
+          &:hover {
+            color: #ffffff;
+            background-color: @color-default-main;
+
+            i {
+              &.home {
+                background-image: url('../src/icon/i-home-active.svg');
+              }
+              &.employee {
+                background-image: url('../src/icon/i-employee-active.svg');
+              }
+              &.logs {
+                background-image: url('../src/icon/i-logs-active.svg');
+              }
+              &.logout {
+                background-image: url('../src/icon/i-logout-active.svg');
+              }
+              &.auth {
+                background-image: url('../src/icon/i-auth-active.svg');
+              }
+              &.user {
+                background-image: url('../src/icon/i-user-active.svg');
+              }
+              &.teamwork {
+                background-image: url('../src/icon/i-teamwork-active.svg');
+              }
+              &.attend {
+                background-image: url('../src/icon/i-attend-active.svg');
+              }
+              &.statistics {
+                background-image: url('../src/icon/i-statistics-active.svg');
+              }
+              &.approval {
+                background-image: url('../src/icon/i-approval-active.svg');
+              }
+              &.announcement {
+                background-image: url('../src/icon/i-announcement-active.svg');
+              }
+            }
+          }
+        }
+        .sk-layout-menu-body-list {
+          
+          &>div {
+            line-height: 30px;
+            padding-left: 40px;
+            .transition(all, 0.5s, ease);
+            cursor: pointer;
+
+            &:hover {
+              color: @color-default-main;
+            }
+
+            &:first-child {
+              margin-top: 10px;
+            }
+          }
         }
 
         i {
-          width: 20px;
-          height: 20px;
+          width: 16px;
+          height: 16px;
           position: absolute;
-          top: 10px;
+          top: 7px;
           left: 15px;
           background-size: 100%;
           background-repeat: no-repeat;
+          .transition(all, 0.5s, ease);
 
           &.home {
             background-image: url('../src/icon/i-home.svg');
