--- a/styles/index.css
+++ b/styles/index.css
@@ -1329,15 +1329,219 @@
   position: fixed;
   top: 0;
   left: 0;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  background-color: #f7f8fa;
 }
 .sk-layout.sk-layout-show-menu .sk-layout-menu {
-  width: 220px;
+  width: 200px;
 }
 .sk-layout.sk-layout-show-menu .sk-layout-menu .sk-layout-menu-body {
-  width: 220px;
+  width: 200px;
 }
 .sk-layout.sk-layout-show-menu .sk-layout-content {
-  padding-left: 220px;
+  padding-left: 200px;
+}
+.sk-layout.sk-layout-show-menu .sk-layout-content .sk-layout-sub-menu {
+  left: 200px;
+}
+.sk-layout.sk-layout-show-top {
+  padding-top: 50px;
+}
+.sk-layout.sk-layout-show-top .sk-layout-top-menu {
+  height: 50px;
+}
+.sk-layout.sk-layout-show-top .sk-layout-content {
+  padding-top: 50px;
+}
+.sk-layout.sk-layout-show-top .sk-layout-content .sk-layout-sub-menu {
+  padding-top: 60px;
+}
+.sk-layout.sk-google-theme .sk-layout-menu .sk-layout-menu-body {
+  background-image: none;
+  color: #3c4043;
+  padding-top: 20px;
+}
+.sk-layout.sk-google-theme .sk-layout-menu .sk-layout-menu-body > div {
+  border-radius: 0 20px 20px 0;
+}
+.sk-layout.sk-google-theme .sk-layout-menu .sk-layout-menu-body > div:hover {
+  background-color: rgba(0, 0, 0, 0.039);
+}
+.sk-layout.sk-google-theme .sk-layout-menu .sk-layout-menu-body > div.active {
+  color: #1a73e8;
+  background-color: #e8f0fe;
+}
+.sk-layout .sk-layout-top-menu {
+  background-color: #4381e6;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 1001;
+  height: 0;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  overflow: hidden;
+}
+.sk-layout .sk-layout-top-menu .sk-project-name {
+  color: #ffffff;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  font-weight: 300;
+  text-align: center;
+  width: 200px;
+  line-height: 50px;
+  font-size: 24px;
+}
+.sk-layout .sk-layout-top-menu .sk-layout-portrait {
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+  padding: 0 20px;
+}
+.sk-layout .sk-layout-top-menu .sk-layout-portrait .sk-layout-portrait-default {
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+  border: 2px solid #ffffff;
+  height: 26px;
+  width: 26px;
+  margin: 10px;
+  border-radius: 20px;
+  cursor: pointer;
+  background-size: 100%;
+  background-image: url('../src/icon/i-portrait.svg');
+}
+.sk-layout .sk-layout-top-menu .sk-layout-portrait-user-info {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: 0;
+  z-index: 1002;
+}
+.sk-layout .sk-layout-top-menu .sk-layout-portrait-user-info > div {
+  position: absolute;
+  top: 60px;
+  right: 20px;
+  background-color: #ffffff;
+  width: 260px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  padding: 20px;
+}
+.sk-layout .sk-layout-top-menu .sk-layout-portrait-user-info > div .sk-layout-portrait-user-portrait {
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+  border: 4px solid #ffffff;
+  height: 70px;
+  width: 70px;
+  margin: 10px auto;
+  border-radius: 50%;
+  background-size: 100%;
+  background-image: url('../src/icon/i-portrait.svg');
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+}
+.sk-layout .sk-layout-top-menu .sk-layout-portrait-user-info > div .sk-layout-portrait-user-name {
+  text-align: center;
+  font-size: 14px;
+  line-height: 30px;
+}
+.sk-layout .sk-layout-top-menu .sk-layout-portrait-user-info > div .sk-layout-portrait-user-logout {
+  width: 120px;
+  font-size: 12px;
+  line-height: 30px;
+  margin: 20px auto;
+  cursor: pointer;
+  text-align: center;
+  border: 1px solid #eaedf1;
+  border-radius: 15px;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+}
+.sk-layout .sk-layout-top-menu .sk-layout-portrait-user-info > div .sk-layout-portrait-user-logout:hover {
+  background-color: #e8eaed;
 }
 .sk-layout .sk-layout-menu {
   transition-property: all;
@@ -1364,13 +1568,12 @@
   height: 100%;
   display: inline-block;
   vertical-align: top;
+  background-color: #ffffff;
 }
 .sk-layout .sk-layout-menu .sk-layout-menu-body {
   position: absolute;
   width: 50px;
   height: 100%;
-  color: #fff;
-  padding-top: 50px;
   transition-property: all;
   transition-duration: 0.5s;
   transition-timing-function: ease;
@@ -1393,16 +1596,146 @@
   -ms-transition-delay: 0;
   z-index: 1000;
   overflow: hidden;
-  background-image: url(../src/img/menu-bk.jpeg);
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body:hover {
-  width: 220px;
 }
 .sk-layout .sk-layout-menu .sk-layout-menu-body > div {
-  width: 220px;
-  padding-left: 50px;
-  height: 40px;
-  line-height: 40px;
+  margin: 14px 20px;
+  height: 30px;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+  overflow: hidden;
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active {
+  height: auto;
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title {
+  color: #ffffff;
+  background-color: #4381e6;
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.home {
+  background-image: url('../src/icon/i-home-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.employee {
+  background-image: url('../src/icon/i-employee-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.logs {
+  background-image: url('../src/icon/i-logs-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.logout {
+  background-image: url('../src/icon/i-logout-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.auth {
+  background-image: url('../src/icon/i-auth-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.user {
+  background-image: url('../src/icon/i-user-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.teamwork {
+  background-image: url('../src/icon/i-teamwork-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.attend {
+  background-image: url('../src/icon/i-attend-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.statistics {
+  background-image: url('../src/icon/i-statistics-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.approval {
+  background-image: url('../src/icon/i-approval-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.announcement {
+  background-image: url('../src/icon/i-announcement-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title {
+  height: 30px;
+  line-height: 32px;
+  background-color: #f0f3fa;
+  padding-left: 40px;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  position: relative;
+  font-size: 14px;
+  border-radius: 20px;
+  cursor: pointer;
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover {
+  color: #ffffff;
+  background-color: #4381e6;
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.home {
+  background-image: url('../src/icon/i-home-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.employee {
+  background-image: url('../src/icon/i-employee-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.logs {
+  background-image: url('../src/icon/i-logs-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.logout {
+  background-image: url('../src/icon/i-logout-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.auth {
+  background-image: url('../src/icon/i-auth-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.user {
+  background-image: url('../src/icon/i-user-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.teamwork {
+  background-image: url('../src/icon/i-teamwork-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.attend {
+  background-image: url('../src/icon/i-attend-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.statistics {
+  background-image: url('../src/icon/i-statistics-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.approval {
+  background-image: url('../src/icon/i-approval-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.announcement {
+  background-image: url('../src/icon/i-announcement-active.svg');
+}
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-list > div {
+  line-height: 30px;
+  padding-left: 40px;
   transition-property: all;
   transition-duration: 0.5s;
   transition-timing-function: ease;
@@ -1424,27 +1757,41 @@
   -ms-transition-timing-function: ease;
   -ms-transition-delay: 0;
   cursor: pointer;
-  position: relative;
-  font-size: 14px;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -ms-box-sizing: border-box;
 }
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active {
-  background-color: rgba(255, 255, 255, 0.3);
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-list > div:hover {
+  color: #4381e6;
 }
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div:hover {
-  background-color: rgba(255, 255, 255, 0.2);
+.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-list > div:first-child {
+  margin-top: 10px;
 }
 .sk-layout .sk-layout-menu .sk-layout-menu-body > div i {
-  width: 20px;
-  height: 20px;
+  width: 16px;
+  height: 16px;
   position: absolute;
-  top: 10px;
+  top: 7px;
   left: 15px;
   background-size: 100%;
   background-repeat: no-repeat;
+  transition-property: all;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transition-delay: 0;
+  -moz-transition-property: all;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-timing-function: ease;
+  -moz-transition-delay: 0;
+  -o-transition-property: all;
+  -o-transition-duration: 0.5s;
+  -o-transition-timing-function: ease;
+  -o-transition-delay: 0;
+  -webkit-transition-property: all;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-timing-function: ease;
+  -webkit-transition-delay: 0;
+  -ms-transition-property: all;
+  -ms-transition-duration: 0.5s;
+  -ms-transition-timing-function: ease;
+  -ms-transition-delay: 0;
 }
 .sk-layout .sk-layout-menu .sk-layout-menu-body > div i.home {
   background-image: url('../src/icon/i-home.svg');
