--- a/less/layout.less
+++ b/less/layout.less
@@ -181,44 +181,44 @@
           height: auto;
 
           .sk-layout-menu-body-title {
-            color: #ffffff;
-            background-color: @color-default-main;
+            // color: #ffffff;
+            // background-color: @color-default-main;
 
-            i {
-              &.home {
-                background-image: url('../src/icon/i-home-active.svg');
-              }
-              &.employee {
-                background-image: url('../src/icon/i-employee-active.svg');
-              }
-              &.logs {
-                background-image: url('../src/icon/i-logs-active.svg');
-              }
-              &.logout {
-                background-image: url('../src/icon/i-logout-active.svg');
-              }
-              &.auth {
-                background-image: url('../src/icon/i-auth-active.svg');
-              }
-              &.user {
-                background-image: url('../src/icon/i-user-active.svg');
-              }
-              &.teamwork {
-                background-image: url('../src/icon/i-teamwork-active.svg');
-              }
-              &.attend {
-                background-image: url('../src/icon/i-attend-active.svg');
-              }
-              &.statistics {
-                background-image: url('../src/icon/i-statistics-active.svg');
-              }
-              &.approval {
-                background-image: url('../src/icon/i-approval-active.svg');
-              }
-              &.announcement {
-                background-image: url('../src/icon/i-announcement-active.svg');
-              }
-            }
+            // i {
+            //   &.home {
+            //     background-image: url('../src/icon/i-home-active.svg');
+            //   }
+            //   &.employee {
+            //     background-image: url('../src/icon/i-employee-active.svg');
+            //   }
+            //   &.logs {
+            //     background-image: url('../src/icon/i-logs-active.svg');
+            //   }
+            //   &.logout {
+            //     background-image: url('../src/icon/i-logout-active.svg');
+            //   }
+            //   &.auth {
+            //     background-image: url('../src/icon/i-auth-active.svg');
+            //   }
+            //   &.user {
+            //     background-image: url('../src/icon/i-user-active.svg');
+            //   }
+            //   &.teamwork {
+            //     background-image: url('../src/icon/i-teamwork-active.svg');
+            //   }
+            //   &.attend {
+            //     background-image: url('../src/icon/i-attend-active.svg');
+            //   }
+            //   &.statistics {
+            //     background-image: url('../src/icon/i-statistics-active.svg');
+            //   }
+            //   &.approval {
+            //     background-image: url('../src/icon/i-approval-active.svg');
+            //   }
+            //   &.announcement {
+            //     background-image: url('../src/icon/i-announcement-active.svg');
+            //   }
+            // }
           }
         }
         .sk-layout-menu-body-title {
@@ -233,46 +233,46 @@
           border-radius: 20px;
           cursor: pointer;
 
-          &:hover {
-            color: #ffffff;
-            background-color: @color-default-main;
+          // &:hover {
+          //   color: #ffffff;
+          //   background-color: @color-default-main;
 
-            i {
-              &.home {
-                background-image: url('../src/icon/i-home-active.svg');
-              }
-              &.employee {
-                background-image: url('../src/icon/i-employee-active.svg');
-              }
-              &.logs {
-                background-image: url('../src/icon/i-logs-active.svg');
-              }
-              &.logout {
-                background-image: url('../src/icon/i-logout-active.svg');
-              }
-              &.auth {
-                background-image: url('../src/icon/i-auth-active.svg');
-              }
-              &.user {
-                background-image: url('../src/icon/i-user-active.svg');
-              }
-              &.teamwork {
-                background-image: url('../src/icon/i-teamwork-active.svg');
-              }
-              &.attend {
-                background-image: url('../src/icon/i-attend-active.svg');
-              }
-              &.statistics {
-                background-image: url('../src/icon/i-statistics-active.svg');
-              }
-              &.approval {
-                background-image: url('../src/icon/i-approval-active.svg');
-              }
-              &.announcement {
-                background-image: url('../src/icon/i-announcement-active.svg');
-              }
-            }
-          }
+          //   i {
+          //     &.home {
+          //       background-image: url('../src/icon/i-home-active.svg');
+          //     }
+          //     &.employee {
+          //       background-image: url('../src/icon/i-employee-active.svg');
+          //     }
+          //     &.logs {
+          //       background-image: url('../src/icon/i-logs-active.svg');
+          //     }
+          //     &.logout {
+          //       background-image: url('../src/icon/i-logout-active.svg');
+          //     }
+          //     &.auth {
+          //       background-image: url('../src/icon/i-auth-active.svg');
+          //     }
+          //     &.user {
+          //       background-image: url('../src/icon/i-user-active.svg');
+          //     }
+          //     &.teamwork {
+          //       background-image: url('../src/icon/i-teamwork-active.svg');
+          //     }
+          //     &.attend {
+          //       background-image: url('../src/icon/i-attend-active.svg');
+          //     }
+          //     &.statistics {
+          //       background-image: url('../src/icon/i-statistics-active.svg');
+          //     }
+          //     &.approval {
+          //       background-image: url('../src/icon/i-approval-active.svg');
+          //     }
+          //     &.announcement {
+          //       background-image: url('../src/icon/i-announcement-active.svg');
+          //     }
+          //   }
+          // }
         }
         .sk-layout-menu-body-list {
           
