--- a/less/form.less
+++ b/less/form.less
@@ -656,6 +656,49 @@
         }
       }
 
+      .sk-uploadFile {
+        overflow: hidden;
+        height: 30px;
+        position: relative;
+        .upload-file-bt {
+          height: 24px;
+          border: 1px solid @color-solid;
+          margin-top: 3px;
+          border-radius: 15px;
+          overflow: hidden;
+          padding: 0 15px;
+          display: inline-block;
+          font-size: 12px;
+          line-height: 24px;
+          position: absolute;
+          top: 0;
+          left: 0;
+          cursor: pointer;
+
+          &:hover {
+            background-color: @color-bk-1;
+          }
+        }
+
+        .upload-file-src {
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          font-size: 12px;
+          padding-left: 90px;
+        }
+
+        input {
+          width: 100%;
+          height: 100%;
+          position: absolute;
+          top: 0;
+          left: 0;
+          cursor: pointer;
+          opacity: 0;
+        }
+      }
+
       .sk-upload {
         width: 150px;
         height: 80px;
