--- a/styles/index.css
+++ b/styles/index.css
@@ -1131,6 +1131,45 @@
 .sk-form .sk-form-items .sk-form-row .sk-region .sk-region-modal > div .sk-region-data-arr > div.active {
   background-color: #F1F3F4;
 }
+.sk-form .sk-form-items .sk-form-row .sk-uploadFile {
+  overflow: hidden;
+  height: 30px;
+  position: relative;
+}
+.sk-form .sk-form-items .sk-form-row .sk-uploadFile .upload-file-bt {
+  height: 24px;
+  border: 1px solid #eaedf1;
+  margin-top: 3px;
+  border-radius: 15px;
+  overflow: hidden;
+  padding: 0 15px;
+  display: inline-block;
+  font-size: 12px;
+  line-height: 24px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+}
+.sk-form .sk-form-items .sk-form-row .sk-uploadFile .upload-file-bt:hover {
+  background-color: #e8eaed;
+}
+.sk-form .sk-form-items .sk-form-row .sk-uploadFile .upload-file-src {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  font-size: 12px;
+  padding-left: 90px;
+}
+.sk-form .sk-form-items .sk-form-row .sk-uploadFile input {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  cursor: pointer;
+  opacity: 0;
+}
 .sk-form .sk-form-items .sk-form-row .sk-upload {
   width: 150px;
   height: 80px;
@@ -1625,43 +1664,6 @@
 .sk-layout .sk-layout-menu .sk-layout-menu-body > div.active {
   height: auto;
 }
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title {
-  color: #ffffff;
-  background-color: #4381e6;
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.home {
-  background-image: url('../src/icon/i-home-active.svg');
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.employee {
-  background-image: url('../src/icon/i-employee-active.svg');
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.logs {
-  background-image: url('../src/icon/i-logs-active.svg');
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.logout {
-  background-image: url('../src/icon/i-logout-active.svg');
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.auth {
-  background-image: url('../src/icon/i-auth-active.svg');
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.user {
-  background-image: url('../src/icon/i-user-active.svg');
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.teamwork {
-  background-image: url('../src/icon/i-teamwork-active.svg');
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.attend {
-  background-image: url('../src/icon/i-attend-active.svg');
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.statistics {
-  background-image: url('../src/icon/i-statistics-active.svg');
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.approval {
-  background-image: url('../src/icon/i-approval-active.svg');
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div.active .sk-layout-menu-body-title i.announcement {
-  background-image: url('../src/icon/i-announcement-active.svg');
-}
 .sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title {
   height: 30px;
   line-height: 32px;
@@ -1695,43 +1697,6 @@
   font-size: 14px;
   border-radius: 20px;
   cursor: pointer;
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover {
-  color: #ffffff;
-  background-color: #4381e6;
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.home {
-  background-image: url('../src/icon/i-home-active.svg');
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.employee {
-  background-image: url('../src/icon/i-employee-active.svg');
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.logs {
-  background-image: url('../src/icon/i-logs-active.svg');
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.logout {
-  background-image: url('../src/icon/i-logout-active.svg');
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.auth {
-  background-image: url('../src/icon/i-auth-active.svg');
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.user {
-  background-image: url('../src/icon/i-user-active.svg');
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.teamwork {
-  background-image: url('../src/icon/i-teamwork-active.svg');
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.attend {
-  background-image: url('../src/icon/i-attend-active.svg');
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.statistics {
-  background-image: url('../src/icon/i-statistics-active.svg');
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.approval {
-  background-image: url('../src/icon/i-approval-active.svg');
-}
-.sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-title:hover i.announcement {
-  background-image: url('../src/icon/i-announcement-active.svg');
 }
 .sk-layout .sk-layout-menu .sk-layout-menu-body > div .sk-layout-menu-body-list > div {
   line-height: 30px;
